[metadata]
name = napari-ultrasound-viewer
version = 0.0.1
author = Leopold Franz
author_email = leopold.franz@bsse.ethz.ch
url = https://github.com/leopold-franz/napari-ultrasound-viewer
license = BSD-3-Clause
description = This repo contains three napari plugins to 1. Load a dicom sample image. 2. Read a dicom images. 3. Read H5 (HDF5) images.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.8
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/leopold-franz/napari-ultrasound-viewer/issues
    Documentation = https://github.com/leopold-franz/napari-ultrasound-viewer#README.md
    Source Code = https://github.com/leopold-franz/napari-ultrasound-viewer
    User Support = https://github.com/leopold-franz/napari-ultrasound-viewer/issues

[options]
packages = find:
python_requires = >=3.8
setup_requires = setuptools_scm
# add your package requirements here
install_requires =
    napari
    napari-plugin-engine>=0.1.4
    numpy
    pandas
    pydicom
    h5py
    PyQt5

[options.extras_require]
dev =
    pre-commit
    black
    flake8
    check-manifest>=0.42
    pytest

[options.entry_points]
napari.plugin =
    h5-reader = napari_ultrasound_viewer.reader_hdf5_plugin
    dicom-reader = napari_ultrasound_viewer.reader_dicom_plugin

[flake8]
# Ignores - https://lintlyci.github.io/Flake8Rules
# E203  Whitespace before ':'  (sometimes conflicts with black)
# E501 line too long (84 > 79 characters)  (sometimes too annoying)
# W503	Line break occurred before a binary operator
# C901 McCabe complexity test. Would be nice to re-enable, but takes work
ignore = E203,W503,E501,C901
max-line-length = 79
max-complexity = 18
exclude = vendored|__init__.py|examples|setup.py
